tests/baselines/reference/typeParameterArgumentEquivalence2.errors.txt
tests/cases/compiler/typeParameterArgumentEquivalence2.ts(4,5): error TS2322: Type '(item: T) => boolean' is not assignable to type '(item: U) => boolean'.
  Types of parameters 'item' and 'item' are incompatible.
    Type 'U' is not assignable to type 'T'.
      'U' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/compiler/typeParameterArgumentEquivalence2.ts(5,5): error TS2322: Type '(item: U) => boolean' is not assignable to type '(item: T) => boolean'.
  Types of parameters 'item' and 'item' are incompatible.
    Type 'T' is not assignable to type 'U'.
      'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/typeParameterArgumentEquivalence2.ts (2 errors) ====
    function foo<T,U>() {
        var x: (item: U) => boolean;
        var y: (item: T) => boolean;
        x = y;  // Should be an error
        ~
!!! error TS2322: Type '(item: {|T|0|}) => boolean' is not assignable to type '(item: {|U|1|}) => boolean'.
!!! error TS2322:   Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:     Type '{|U|2|}' is not assignable to type '{|T|3|}'.
!!! error TS2322:       '{|U|4|}' is assignable to the constraint of type '{|T|5|}', but '{|T|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 1 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 2 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 3 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 4 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 5 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 6 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
        y = x;  // Shound be an error
        ~
!!! error TS2322: Type '(item: {|U|0|}) => boolean' is not assignable to type '(item: {|T|1|}) => boolean'.
!!! error TS2322:   Types of parameters 'item' and 'item' are incompatible.
!!! error TS2322:     Type '{|T|2|}' is not assignable to type '{|U|3|}'.
!!! error TS2322:       '{|T|4|}' is assignable to the constraint of type '{|U|5|}', but '{|U|6|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 1 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 2 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 3 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 4 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:14
!!! annotated symbol 5 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
!!! annotated symbol 6 tests/cases/compiler/typeParameterArgumentEquivalence2.ts:1:16
    }
    